atualizando os links de contato

--- a/Discover/index.html
+++ b/Discover/index.html
@@ -23,30 +23,30 @@
 
         <ul>
             <li>
-                <a href="#" target="_blank">Inscrever-se no NLW</a>
+                <a href="http://www.rocketseat.com.br" target="_blank">Inscrever-se no NLW</a>
             </li>
             <li>
-                <a href="#" target="_blank">Meu instagram</a>
+                <a href="https://www.instagram.com/josuck/" target="_blank">Meu instagram</a>
             </li>
             <li>
-                <a href="#" target="_blank">Meu LinkedIn</a>
+                <a href="https://www.linkedin.com/in/josue-b-b48862212/" target="_blank">Meu LinkedIn</a>
             </li>
             <li>
-                <a href="#" target="_blank">Meu Github</a>
+                <a href="https://github.com/Josucka/Explorer" target="_blank">Meu Github</a>
             </li>
 
         </ul>
         <div id="social">
-            <a href="#" target="_blank">
+            <a href="https://jbprogrammer-8.github.io/Page/" target="_blank">
                 <ion-icon name="planet"></ion-icon>
             </a>
-            <a href="#" target="_blank">
+            <a href="https://www.instagram.com/josuck/" target="_blank">
                 <ion-icon name="logo-instagram"></ion-icon>
             </a>
-            <a href="#" target="_blank">
+            <a href="https://www.linkedin.com/in/josue-b-b48862212/" target="_blank">
                 <ion-icon name="logo-linkedin"></ion-icon>
             </a>
-            <a href="#" target="_blank">
+            <a href="https://github.com/Josucka/Explorer" target="_blank">
                 <ion-icon name="logo-github"></ion-icon>
             </a>
         </div>
